<resources>
    <string name="app_name">ShoppingList</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="item_type">Item type:</string>
    <string name="item_name">Item name</string>
    <string name="description">Description (optional)</string>
    <string name="save">Save</string>
    <string name="motto">ShoppingList: Shop Smart</string>
    <string name="txt_about">Designed by Camden Sikes</string>
    <string name="txt_help">Press the plus button to add an item to your list</string>
    <string name="txt_item_added">Item successfully added</string>
    <string name="txt_item_edited">Item successfully edited</string>
    <string name="txt_add_cancel">No item added</string>
    <string name="action_hide">Hide</string>
    <string name="default_name">Item</string>
    <string name="estimated_price">Estimated price</string>
    <string name="price">"$ %1$s"</string>
    <string name="enter_price">Enter an estimated price</string>
    <string name="enter_name">Enter an item name</string>
    <string name="add">Add</string>
    <string name="delete_checked">Clear Checked</string>
    <string name="delete_all">Clear All</string>
</resources>
